--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "TriviaPulse",
+  "name": "TrivTap",
   "short_name": "TrivTap",
   "description": "Engage your audience with real-time trivia games",
   "start_url": "/",
